--- a/hironx_ros_bridge/package.xml
+++ b/hironx_ros_bridge/package.xml
@@ -29,8 +29,10 @@
   <build_depend>rosbash</build_depend>
   <build_depend>rosbuild</build_depend>
   <build_depend>roslang</build_depend>
+  <build_depend>rtmbuild</build_depend>
   <build_depend>unzip</build_depend>
   <build_depend>gnuplot</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>gnuplot</run_depend>
   <run_depend>moveit_commander</run_depend>
@@ -42,6 +44,7 @@
   <run_depend>rospy</run_depend>
   <run_depend>roslang</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
     <rqt_gui plugin="${prefix}/rqt_plugin.xml"/>
