--- a/hironx_ros_bridge/package.xml
+++ b/hironx_ros_bridge/package.xml
@@ -32,6 +32,7 @@
   <build_depend>rtmbuild</build_depend>
   <build_depend>unzip</build_depend>
   <build_depend>gnuplot</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>gnuplot</run_depend>
   <run_depend>moveit_commander</run_depend>
